# flintai-sdk-py

./: .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  socket-cve-fix.yml
examples/: .gitignore  README.md  requirements.txt
examples/adk/expense_tracker/: agent.py
examples/adk/todo_list/: agent.py
examples/langchain/weather/: weather.py
src/flintai/: __init__.py  core.py  guardrails.py
src/flintai/plugins/: __init__.py  _llm_wrapper.py  _provider_base.py  adk.py  langchain.py
src/flintai_sdk/: __init__.py  core.py  guardrails.py
src/flintai_sdk/plugins/: __init__.py  _llm_wrapper.py  _provider_base.py  adk.py
tests/: conftest.py  test_adk_plugin.py  test_core.py  test_flintai.py  test_flintai_sdk.py  test_guardrails.py  test_langchain_plugin.py  test_sdk_compat.py  test_wrap.py
